styles.css
body {
    background-color: rgb(79, 82, 81);
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculator {
    border: 3px solid black;
    font-size: 0px;
    box-shadow: 5px 5px;
    border-radius: 8px;
}

.number {
    background-color:bisque;
    border: 1px solid;
}

.operator {
    background-color:rgb(247, 150, 32);
    border: 1px solid;
    border-radius: 8px;
}

.display {
    display: flex;
    background-color: white;
    justify-content: end;
    font-size: 50px;
    border: 1px solid black;
    border-radius: 8px;
}

button {
    width: 75px;
    height: 75px;
}



button:hover {
    background-color: rgb(214, 207, 143);
}

.zero-button {
    width: 150px;
    background-color: bisque;
    border: 1px solid;
}

.clear {
    width: 150px;
}

